# clangplugin

./: CMakeLists.txt  CODE_EXPLANATION.md  DEMO_OUTPUT.md  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  Presentation_Guide.docx  README.md  REPORT.md  asm_validator  build.sh  build_and_run.bat  run.sh  run_tests.sh  ~$esentation_Guide.docx
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake
plugin/: AsmTokenizer.cpp  AsmTokenizer.h  AsmValidator.cpp  CallingConvention.h  RegisterTable.h
standalone/: AsmValidatorStandalone.cpp
tests/: buggy_1_missing_clobber.c  buggy_2_invalid_register.c  buggy_3_stack_misalign.c  buggy_4_callee_saved.c  correct_1_basic_add.c  correct_2_syscall.c  correct_3_full_constraints.c
